--- a/src/components/Preview.astro
+++ b/src/components/Preview.astro
@@ -9,9 +9,7 @@ const { type, title, url } = Astro.props;
 
 const typeEmoji =
     {
-        release: "🎧",
-        mix: "🎚️",
-        "live recording": "🎤",
+        "MIX & MASTERING": "🎚️",
     }[type] || "🎵";
 ---
 
