--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -24,19 +24,25 @@ import aboutImage from "../assets/about-image.jpeg";
     </h1>
     <div>
       <p class="mb-6 text-base md:text-lg text-primary">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur.
+        Nine Lives Studio es un espacio dedicado al sonido en todas sus formas:
+        la música que se mezcla, las emociones que se masterizan y las historias
+        que se cuentan a través del audio. Este proyecto nace desde el deseo de
+        trabajar el sonido con intención, con detalle, con tiempo. No creemos en
+        la perfección fría, sino en ese punto exacto donde una canción suena
+        viva, o donde una escena cobre dimensión gracias al diseño sonoro.
       </p>
+
       <p class="text-base md:text-lg text-primary">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor,
-        nisl eget ultricies tincidunt, nisl nisl aliquam nisl, eget ultricies
-        nisl nisl eget nisl. Sed euismod, nisl eget ultricies tincidunt, nisl
-        nisl aliquam nisl, eget ultricies nisl nisl eget nisl. Sed euismod, nisl
-        eget ultricies tincidunt, nisl nisl aliquam nisl, eget ultricies nisl
-        nisl aliquam nisl, eget ultricies nisl nisl eget nisl.
+        En este estudio combino herramientas profesionales, criterio musical y
+        un enfoque personalizado. Ya sea para un track que necesita claridad y
+        carácter, o para un cortometraje que busca profundidad y atmósfera, mi
+        compromiso es el mismo: Potencia lo que quieres comunicar.
+      </p>
+
+      <p class="text-base md:text-lg text-primary">
+        Acá vas a encontrar un espacio abierto para poder crecer junto a
+        artistas y realizadores. Si te interesa colaborar, trabajar juntos o
+        simplemente escuchar lo que hago, estás más que invitado.
       </p>
     </div>
   </div>
