--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -22,9 +22,9 @@ import { socialLinks } from "../config/socials";
             >
         </article>
         <article>
-            <h2 class="text-sm font-bold text-primary">Reservas</h2>
+            <h2 class="text-sm font-bold text-primary">Booking</h2>
             <p class="my-3 text-sm font-normal text-primary">
-                ¿Quieres trabajar con nosotros o agendar una sesión?
+                ¿Quieres trabajar con nosotros?
             </p>
             <a
                 class="font-medium underline text-accent"
