--- a/src/components/Preview.astro
+++ b/src/components/Preview.astro
@@ -33,9 +33,9 @@ const typeEmoji =
             <a
                 class="underline font-medium text-sm whitespace-nowrap text-accent"
                 href={url}
+                target="_blank"
+                rel="noopener noreferrer">Escúchala aquí</a
             >
-                Escúchala aquí
-            </a>
         </footer>
     </article>
 </li>
