--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import aboutImage from "../assets/about-image.jpeg";
+import aboutImage from "../assets/about-image.jpg";
 ---
 
 <section
@@ -32,7 +32,7 @@ import aboutImage from "../assets/about-image.jpeg";
         viva, o donde una escena cobre dimensión gracias al diseño sonoro.
       </p>
 
-      <p class="text-base md:text-lg text-primary">
+      <p class="text-base md:text-lg text-primary mb-6">
         En este estudio combino herramientas profesionales, criterio musical y
         un enfoque personalizado. Ya sea para un track que necesita claridad y
         carácter, o para un cortometraje que busca profundidad y atmósfera, mi
