--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,9 @@
 
 :root {
   /* Dark mode variables */
-  --color-dark-accent: #FC4AB5;
+  --color-dark-accent: #BBBBC5;
   --color-dark-primary: #D0CFCD;
-  --color-dark-secondary: #CF552C;
+  --color-dark-secondary: #69696E;
   --color-dark-background: #151516;
   --color-dark-fill: #232323;
 
