--- a/src/pages/Footer.astro
+++ b/src/pages/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="w-full px-4 md:px-12 xl:px-24 py-8 bg-accent text-primary">
+<footer class="w-full px-4 md:px-12 xl:px-24 py-8 bg-accent text-background">
     <div
         class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
     >
