Update menu bg color

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -53,7 +53,7 @@ const options = [
                     }
                 </ol>
                 <button
-                    class="py-3 px-4 text-white rounded-md transition-all duration-300 flex items-end md:hidden bg-accent"
+                    class="py-3 px-4 text-white rounded-md transition-all duration-300 flex items-end md:hidden bg-fill"
                     id="menu-button"
                     aria-label="Abrir menú"
                     aria-expanded="false"
