Add image to mobile version

--- a/src/pages/Portfolio.astro
+++ b/src/pages/Portfolio.astro
@@ -9,20 +9,20 @@ import musicVideo from "../assets/music-side.mp4";
   class="w-full flex flex-col gap-8 px-4 md:px-12 xl:px-24 py-8 md:py-12 xl:py-20 bg-background"
 >
   <h1
-    class="title translate-y-10 opacity-0 w-full text-left font-extrabold text-[8vw] leading-none tracking-tight uppercase mb-8 text-accent"
+    class="w-full text-left font-extrabold text-[8vw] leading-none tracking-tight uppercase mb-8 text-accent"
   >
     PORTAFOLIO
   </h1>
   <div class="w-full flex flex-col md:flex-row items-start gap-8">
-    <div class="w-full md:w-2/3 flex flex-col">
+    <div class="w-full flex flex-col">
       <ul class="w-full divide-y border-y border-fill divide-fill">
         {music.map((m) => <Preview {...m} />)}
       </ul>
     </div>
-    <div class="hidden md:flex w-1/3 items-start justify-end">
+    <div class="flex w-full md:w-1/3 items-start justify-center md:justify-end">
       <video
         src={musicVideo}
-        class="rounded-xl shadow-lg object-cover w-full aspect-[3/4] max-w-[420px]"
+        class="rounded-xl shadow-lg object-cover w-full aspect-[3/4] max-w-[420px] bg-fill"
         autoplay
         loop
         muted
@@ -31,7 +31,7 @@ import musicVideo from "../assets/music-side.mp4";
   </div>
 </section>
 
-<script>
+<!-- <script>
   import("gsap").then(({ gsap }) => {
     import("gsap/ScrollTrigger").then(({ ScrollTrigger }) => {
       gsap.registerPlugin(ScrollTrigger);
@@ -47,4 +47,4 @@ import musicVideo from "../assets/music-side.mp4";
       });
     });
   });
-</script>
+</script> -->
