Update home info resume

--- a/src/pages/Home.astro
+++ b/src/pages/Home.astro
@@ -35,11 +35,11 @@ import nlsImage from "../assets/nls.png";
         </div>
         <div class="flex flex-col self-end w-full">
             <p class="text-base xl:text-lg mb-3 text-primary">
-                Somos un espacio dedicado al sonido en todas sus formas: la
-                música que se mezcla, las emociones que se masterizan y las
-                historias que se cuentan a través del audio. Este proyecto nace
-                desde el deseo de trabajar el sonido con intención, con detalle,
-                con tiempo.
+                Nine Lives Studio es un espacio dedicado al sonido en todas sus
+                formas: la música que se mezcla, las emociones que se masterizan
+                y las historias que se cuentan a través del audio. Este proyecto
+                nace desde el deseo de trabajar el sonido con intención, con
+                detalle, con tiempo.
             </p>
             <a
                 href="#about"
