--- a/src/pages/Portfolio.astro
+++ b/src/pages/Portfolio.astro
@@ -1,7 +1,7 @@
 ---
 import Preview from "../components/Preview.astro";
 import { music } from "../data/music";
-import musicVideo from "../assets/music-side.mp4";
+// import musicVideo from "../assets/music-side.mp4";
 ---
 
 <section
@@ -20,13 +20,13 @@ import musicVideo from "../assets/music-side.mp4";
       </ul>
     </div>
     <div class="flex w-full md:w-1/3 items-start justify-center md:justify-end">
-      <video
+      <!-- <video
         src={musicVideo}
         class="rounded-xl shadow-lg object-cover w-full aspect-[3/4] max-w-[420px] bg-fill"
         autoplay
         loop
         muted
-        playsinline></video>
+        playsinline></video> -->
     </div>
   </div>
 </section>
