Fix mb for texts in about section

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -41,14 +41,14 @@ import aboutImage from "../assets/about-image.jpg";
         sonoro.
       </p>
 
-      <p class="text-base xl:text-lg text-primary mb-6">
+      <p class="mb-6 text-base xl:text-lg text-primary">
         En este estudio combino herramientas profesionales, criterio musical y
         un enfoque personalizado. Ya sea para un track que necesita claridad y
         carácter, o para un cortometraje que busca profundidad y atmósfera, mi
         compromiso es el mismo: Potencia lo que quieres comunicar.
       </p>
 
-      <p class="text-base xl:text-lg text-primary">
+      <p class="mb-6 text-base xl:text-lg text-primary">
         Acá vas a encontrar un espacio abierto para poder crecer junto a
         artistas y realizadores. Si te interesa colaborar, trabajar juntos o
         simplemente escuchar lo que hago, estás más que invitado.
