Update SEO and meta attributes

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 ---
+
 <!doctype html>
 <html lang="es">
 	<head>
@@ -8,8 +9,55 @@ import "../styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-		<title>Nine Lives Studio | Estudio de Mezcla, Mastering y Post Producción de Audio</title>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+		/>
+		<title>
+			Nine Lives Studio | Estudio de Mezcla, Mastering y Postproducción de
+			Audio
+		</title>
+
+		<meta
+			name="description"
+			content="Estudio con sede en Argentina. Mezcla, mastering y postproducción de audio remota para artistas y productoras de todo el mundo."
+		/>
+		<meta
+			name="keywords"
+			content="mezcla, mastering, postproducción de audio, estudio remoto, audio profesional, estudio en Argentina, producción musical, sonido profesional"
+		/>
+		<meta name="author" content="Nine Lives Studio" />
+		<meta name="robots" content="index, follow" />
+
+		<meta
+			property="og:title"
+			content="Nine Lives Studio | Mezcla, Mastering y Postproducción de Audio"
+		/>
+		<meta
+			property="og:description"
+			content="Estudio con sede en Argentina. Mezcla, mastering y postproducción de audio remota para artistas y productoras de todo el mundo."
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.ninelivestudio.com" />
+		<meta
+			property="og:image"
+			content="https://www.ninelivestudio.com/nls-og.jpg"
+		/>
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Nine Lives Studio | Mezcla, Mastering y Postproducción de Audio"
+		/>
+		<meta
+			name="twitter:description"
+			content="Estudio con sede en Argentina. Mezcla, mastering y postproducción de audio remota para artistas y productoras de todo el mundo."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://www.ninelivestudio.com/nls-og.jpg"
+		/>
+		<link rel="canonical" href="https://www.ninelivestudio.com" />
 	</head>
 	<body>
 		<slot />
