Fix og image extension

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ import "../styles/global.css";
 		<meta property="og:url" content="https://www.ninelivestudio.com" />
 		<meta
 			property="og:image"
-			content="https://www.ninelivestudio.com/nls-og.jpg"
+			content="https://www.ninelivestudio.com/nls-og.jpeg"
 		/>
 
 		<meta name="twitter:card" content="summary_large_image" />
@@ -55,7 +55,7 @@ import "../styles/global.css";
 		/>
 		<meta
 			name="twitter:image"
-			content="https://www.ninelivestudio.com/nls-og.jpg"
+			content="https://www.ninelivestudio.com/nls-og.jpeg"
 		/>
 		<link rel="canonical" href="https://www.ninelivestudio.com" />
 	</head>
