Update og image and og:site_name attr

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,10 @@ import "../styles/global.css";
 			property="og:image"
 			content="https://www.ninelivestudio.com/nls-og.jpeg"
 		/>
+		<meta
+			property="og:site_name"
+			content="Nine Lives Studio | Mezcla, Mastering y Postproducción de Audio"
+		/>
 
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta
