Fix text styles for contact and footer sections

--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -14,16 +14,16 @@ import { socialLinks } from "../config/socials";
     </h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <article>
-            <h2 class="text-sm font-bold text-primary">Información general</h2>
-            <p class="my-3 text-sm font-regular text-primary">Escríbenos a:</p>
+            <h2 class="text-base xl:text-lg font-bold text-primary">Información general</h2>
+            <p class="my-3 text-base xl:text-lg text-primary">Escríbenos a:</p>
             <a
-                class="font-medium underline text-accent"
-                href="mailto:info@ninelives.studio">info@ninelives.studio</a
+                class="text-base xl:text-lg font-medium underline text-accent"
+                href="mailto:info@ninelivestudio.com">info@ninelivestudio.com</a
             >
         </article>
         <article>
-            <h2 class="text-sm font-bold text-primary">Booking</h2>
-            <p class="my-3 text-sm font-normal text-primary">
+            <h2 class="text-base xl:text-lg font-bold text-primary">Booking</h2>
+            <p class="my-3 text-base xl:text-lg text-primary">
                 ¿Quieres trabajar con nosotros?
             </p>
             <a
@@ -33,8 +33,8 @@ import { socialLinks } from "../config/socials";
             >
         </article>
         <article>
-            <h2 class="text-sm font-bold text-primary">Redes sociales</h2>
-            <p class="my-3 text-sm font-normal text-primary">
+            <h2 class="text-base xl:text-lg font-bold text-primary">Redes sociales</h2>
+            <p class="my-3 text-base xl:text-lg text-primary">
                 Síguenos y mantente al tanto de nuestros últimos proyectos
             </p>
             <div class="my-3 flex gap-4">
