--- a/src/pages/Footer.astro
+++ b/src/pages/Footer.astro
@@ -6,8 +6,8 @@
     <div
         class="flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
     >
-        <p>Ninelivestudio.com - Copyright 2025</p>
-        <p>
+        <p class="text-sm font-normal">Ninelivestudio.com - Copyright 2025</p>
+        <p class="text-sm font-normal">
             Made with manic obsession by <a
                 href="https://integy.tech"
                 target="_blank"
