Refactor pages to components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,11 +8,14 @@
     >
         <p class="text-sm font-normal">Ninelivestudio.com - Copyright 2025</p>
         <p class="text-sm font-normal">
-            Made with manic obsession by <a
+            Made with manic obsession by{" "}
+            <a
                 href="https://integy.tech"
                 target="_blank"
-                class="underline hover:opacity-80">Integy.tech</a
+                class="underline hover:opacity-80"
             >
+                Integy.tech
+            </a>
         </p>
     </div>
 </footer>
