--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
-import Home from "../pages/Home.astro";
-import Portfolio from "../pages/Portfolio.astro";
-import About from "./About.astro";
-import Contact from "./Contact.astro";
-import Footer from "./Footer.astro";
+import Home from "../components/Home.astro";
+import Portfolio from "../components/Portfolio.astro";
+import About from "../components/About.astro";
+import Contact from "../components/Contact.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout>
