Add noopener and noreferrer to links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,7 @@
             <a
                 href="https://integy.tech"
                 target="_blank"
+                rel="noopener noreferrer"
                 class="underline hover:opacity-80"
             >
                 Integy.tech
