--- a/src/components/Preview.astro
+++ b/src/components/Preview.astro
@@ -14,7 +14,7 @@ const typeEmoji =
 ---
 
 <li>
-    <article class="flex items-center justify-between py-6">
+    <article class="flex items-center justify-between py-6" aria-label={title}>
         <header class="flex items-center flex-1">
             <figure
                 class="font-bold text-[22px] min-w-[40px]"
@@ -23,7 +23,7 @@ const typeEmoji =
                 {typeEmoji}
             </figure>
             <div class="flex-1 flex flex-col items-start px-4">
-                <h2 class="text-base font-medium text-primary">{title}</h2>
+                <h4 class="text-base font-medium text-primary">{title}</h4>
                 <p class="text-xs uppercase font-semibold mt-1 text-secondary">
                     {type}
                 </p>
