Add noopener and noreferrer to contact links

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -14,7 +14,9 @@ import { socialLinks } from "../config/socials";
     </h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
         <article>
-            <h2 class="text-base xl:text-lg font-bold text-primary">Información general</h2>
+            <h2 class="text-base xl:text-lg font-bold text-primary">
+                Información general
+            </h2>
             <p class="my-3 text-base xl:text-lg text-primary">Escríbenos a:</p>
             <a
                 class="text-base xl:text-lg font-medium underline text-accent"
@@ -29,11 +31,14 @@ import { socialLinks } from "../config/socials";
             <a
                 class="font-medium underline text-accent"
                 href={socialLinks.instagram}
-                target="_blank">@ninelivesstudio_</a
+                target="_blank"
+                rel="noopener noreferrer">@ninelivesstudio_</a
             >
         </article>
         <article>
-            <h2 class="text-base xl:text-lg font-bold text-primary">Redes sociales</h2>
+            <h2 class="text-base xl:text-lg font-bold text-primary">
+                Redes sociales
+            </h2>
             <p class="my-3 text-base xl:text-lg text-primary">
                 Síguenos y mantente al tanto de nuestros últimos proyectos
             </p>
@@ -42,4 +47,4 @@ import { socialLinks } from "../config/socials";
             </div>
         </article>
     </div>
-</section> 
+</section>
