Update service span for h4

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -9,9 +9,9 @@ import nlsImage from "../assets/nls.png";
     class="w-full flex flex-col gap-8 px-4 md:px-12 xl:px-24 py-8 md:py-12 xl:py-20 mt-24 bg-background"
 >
     <h1 class="sr-only">
-        Estudio de mezcla, mastering y postproducción de audio ubicado en
-        Buenos Aires, Argentina. Especializado en rock, indie y alternativo -
-        Nine Lives Studio
+        Estudio de mezcla, mastering y postproducción de audio ubicado en Buenos
+        Aires, Argentina. Especializado en rock, indie y alternativo - Nine
+        Lives Studio
     </h1>
     <div class="w-full">
         <h2
@@ -32,7 +32,7 @@ import nlsImage from "../assets/nls.png";
                     services.map((u) => (
                         <li class="flex items-center gap-3 rounded-xl p-4 text-sm xl:text-base bg-fill">
                             <span class="text-2xl">{u.icon}</span>
-                            <span class="text-primary">{u.title}</span>
+                            <h4 class="text-primary">{u.title}</h4>
                         </li>
                     ))
                 }
