Update about image

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -16,7 +16,7 @@ import aboutImage from "../assets/about-image.jpg";
     <Image
       src={aboutImage}
       alt="CEO de Nine Lives Studio"
-      class="rounded-xl object-cover w-full lg:aspect-square aspect-video bg-fill"
+      class="rounded-xl object-cover w-full lg:aspect-auto aspect-video bg-fill"
     />
   </div>
   <div class="w-full lg:w-3/4 flex flex-col relative">
