Migrate video to cdn

--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,7 +1,6 @@
 ---
 import Preview from "../components/Preview.astro";
 import { music } from "../data/music";
-import musicVideo from "../assets/music-side.mp4";
 ---
 
 <section
@@ -21,7 +20,7 @@ import musicVideo from "../assets/music-side.mp4";
     </div>
     <div class="flex w-full md:w-1/3 items-start justify-center md:justify-end">
       <video
-        src={musicVideo}
+        src="https://cdn.ninelivestudio.com/music-side.mp4"
         class="rounded-xl shadow-lg object-cover w-full aspect-[3/4] max-w-[420px] bg-fill"
         autoplay
         loop
