--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -165,6 +165,11 @@ const options = [
                 "click",
                 this.handleMenuClick.bind(this),
             );
+
+            const mobileMenuLinks = this.mobileMenu.querySelectorAll('a[role="menuitem"]');
+            mobileMenuLinks.forEach(link => {
+                link.addEventListener('click', () => this.closeMenu());
+            });
         }
 
         private openMenu(): void {
