Improve Head implementation

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -1,5 +1,6 @@
 ---
-
+import { urls } from "../config/urls";
+import { schema } from "../config/schema";
 ---
 
 <link rel="sitemap" href="/sitemap-index.xml">
@@ -26,10 +27,10 @@
     content="Estudio con sede en Argentina. Mezcla, mastering y postproducción de audio remota para artistas y productoras de todo el mundo."
 />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.ninelivestudio.com" />
+<meta property="og:url" content={urls.base} />
 <meta
     property="og:image"
-    content="https://www.ninelivestudio.com/nls-og.jpeg"
+    content={urls.base + "/nls-og.jpeg"}
 />
 <meta
     property="og:site_name"
@@ -47,50 +48,7 @@
 />
 <meta
     name="twitter:image"
-    content="https://www.ninelivestudio.com/nls-og.jpeg"
+    content={urls.base + "/nls-og.jpeg"}
 />
-<link rel="canonical" href="https://www.ninelivestudio.com" />
-<script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Nine Lives Studio",
-        "image": "https://ninelivestudio.com/image.png",
-        "@id": "https://ninelivestudio.com",
-        "url": "https://ninelivestudio.com",
-        "telephone": "+54 9 11 2737-7284",
-        "priceRange": "69",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Formosa 523",
-            "addressLocality": "Cdad. Autónoma de Buenos Aires",
-            "postalCode": "C1424BZK",
-            "addressCountry": "AR"
-        },
-        "geo": {
-            "@type": "GeoCoordinates",
-            "latitude": -34.6212315,
-            "longitude": -58.4382724
-        },
-        "openingHoursSpecification": {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": [
-                "Monday",
-                "Tuesday",
-                "Wednesday",
-                "Thursday",
-                "Friday",
-                "Saturday",
-                "Sunday"
-            ],
-            "opens": "00:00",
-            "closes": "23:59"
-        },
-        "sameAs": [
-            "https://instagram.com/ninelivesstudio_",
-            "https://youtube.com/@Nine-Lives-Studio",
-            "https://soundcloud.com/ninelivesstudio",
-            "https://ninelivestudio.com"
-        ]
-    }
-</script>
+<link rel="canonical" href={urls.base} />
+<script type="application/ld+json" set:html={JSON.stringify(schema)}></script>
