Update about image aspect ratio

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -15,8 +15,8 @@ import aboutImage from "../assets/about-image.jpg";
   <div class="w-full flex order-last lg:order-none">
     <Image
       src={aboutImage}
-      alt="CEO de Nine Lives Studio"
-      class="rounded-xl object-cover w-full lg:aspect-auto aspect-video bg-fill"
+      alt="Nine Lives Studio"
+      class="rounded-xl object-cover w-full aspect-auto bg-fill"
     />
   </div>
   <div class="w-full lg:w-3/4 flex flex-col relative">
