--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,6 +1,9 @@
 ---
 import Preview from "../components/Preview.astro";
+import { urls } from "../config/urls";
 import { music } from "../data/music";
+
+const video = urls.cdn + "/portfolio-side.mp4";
 ---
 
 <section
@@ -20,7 +23,7 @@ import { music } from "../data/music";
     </div>
     <div class="flex w-full md:w-1/3 items-start justify-center md:justify-end">
       <video
-        src="https://cdn.ninelivestudio.com/music-side.mp4"
+        src={video}
         class="rounded-xl shadow-lg object-cover w-full aspect-[3/4] max-w-[420px] bg-fill"
         autoplay
         loop
@@ -29,21 +32,3 @@ import { music } from "../data/music";
     </div>
   </div>
 </section>
-
-<!-- <script>
-  import("gsap").then(({ gsap }) => {
-    import("gsap/ScrollTrigger").then(({ ScrollTrigger }) => {
-      gsap.registerPlugin(ScrollTrigger);
-
-      gsap.to(".title", {
-        scrollTrigger: {
-          trigger: "#portfolio",
-          start: "center bottom",
-        },
-        y: 0,
-        opacity: 1,
-        duration: 0.5,
-      });
-    });
-  });
-</script> -->
