Fix booking url style

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -29,7 +29,7 @@ import { socialLinks } from "../config/socials";
                 ¿Quieres trabajar con nosotros?
             </p>
             <a
-                class="font-medium underline text-accent"
+                class="text-base xl:text-lg font-medium underline text-accent"
                 href={socialLinks.instagram}
                 target="_blank"
                 rel="noopener noreferrer">@ninelivesstudio_</a
