Update about texts

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -30,22 +30,30 @@ import aboutImage from "../assets/about-image.jpg";
     <div>
       <p class="mb-6 text-base xl:text-lg text-primary">
         Nine Lives Studio es un espacio dedicado al sonido en todas sus formas:
-        la música que se mezcla, las emociones que se masterizan y las historias
-        que se cuentan a través del audio. Este proyecto nace desde el deseo de
-        trabajar el sonido con intención, con detalle, con tiempo.
+        la música que se mezcla, las emociones que generan cada sonido y las
+        historias que se cuentan a través del audio.
       </p>
 
       <p class="mb-6 text-base xl:text-lg text-primary">
-        No creemos en la perfección fría, sino en ese punto exacto donde una
-        canción suena viva, o donde una escena cobre dimensión gracias al diseño
-        sonoro.
+        Este proyecto nace desde el deseo de trabajar el sonido con intención,
+        con detalle, con tiempo. No creemos en la perfección fría, sino en ese
+        punto exacto donde una canción suena viva, o donde una escena cobre
+        dimensión gracias al diseño sonoro.
+      </p>
+
+      <p class="mb-6 text-base xl:text-lg text-primary">
+        Mi nombre es Alejandro Abad, soy ingeniero de sonido con experiencia en
+        mezcla, mastering, postproducción de audio y sonido en vivo. También soy
+        músico guitarrista, lo cual me permite entender las necesidades de una
+        canción o proyecto desde adentro, no solo desde lo técnico. Trabajo con
+        una mirada sensible, artística y precisa.
       </p>
 
       <p class="mb-6 text-base xl:text-lg text-primary">
         En este estudio combino herramientas profesionales, criterio musical y
         un enfoque personalizado. Ya sea para un track que necesita claridad y
         carácter, o para un cortometraje que busca profundidad y atmósfera, mi
-        compromiso es el mismo: Potencia lo que quieres comunicar.
+        compromiso es el mismo: Potenciar lo que quieres comunicar.
       </p>
 
       <p class="mb-6 text-base xl:text-lg text-primary">
