--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -40,11 +40,7 @@ import nlsImage from "../assets/nls.png";
         </div>
         <div class="flex flex-col self-end w-full">
             <p class="text-base xl:text-lg mb-3 text-primary">
-                Nine Lives Studio es un espacio dedicado al sonido en todas sus
-                formas: la música que se mezcla, las emociones que se masterizan
-                y las historias que se cuentan a través del audio. Este proyecto
-                nace desde el deseo de trabajar el sonido con intención, con
-                detalle, con tiempo.
+                En Nine Lives Studio llevamos el sonido a otro nivel. Mezclas con claridad, masters con carácter y diseño sonoro pensado al detalle. Ya sea música, cine o contenido digital, cada proyecto se trabaja con enfoque técnico y sensibilidad artística.
             </p>
             <a
                 href="#about"
